  * linux-doc: Add python3-yaml to Build-Depends, required from 6.8

  [ Stuart Hayhurst ]
  * sound: Enable TAS2781 Smart Amp modules

  [ Eric Mackay ]
  * [arm64] Dynamically allocate cpumasks and increase supported CPUs to 512

  [ Uwe Kleine-König ]
  * [arm64,armhf] Enable SND_SOC_WM8804_I2C for the hifiberry-digi raspberry
    hat.

 -- Diederik de Haas <didi.debian@cknow.org>  Wed, 24 Apr 2024 10:47:12 +0200

linux (6.7.12-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v6.x/ChangeLog-6.7.10
    - [arm64] dmaengine: fsl-edma: utilize common dt-binding header file
    - [arm64] dmaengine: fsl-edma: correct max_segment_size setting
    - xfrm: Clear low order bits of ->flowi4_tos in decode_session4().
    - xfrm: Pass UDP encapsulation in TX packet offload
    - net: lan78xx: fix runtime PM count underflow on link stop
    - ixgbe: {dis, en}able irqs in ixgbe_txrx_ring_{dis, en}able
    - i40e: disable NAPI right after disabling irqs when handling xsk_pool
    - ice: reorder disabling IRQ and NAPI in ice_qp_dis
    - ice: replace ice_vf_recreate_vsi() with ice_vf_reconfig_vsi()
    - ice: reconfig host after changing MSI-X on VF
    - Revert "net/mlx5: Block entering switchdev mode with ns inconsistency"
    - Revert "net/mlx5e: Check the number of elements before walk TC rhashtable"
    - net/mlx5: E-switch, Change flow rule destination checking
    - net/mlx5: Fix fw reporter diagnose output
    - net/mlx5: Check capability for fw_reset
    - net/mlx5e: Change the warning when ignore_flow_level is not supported
    - net/mlx5e: Fix MACsec state loss upon state update in offload path
    - net/mlx5e: Use a memory barrier to enforce PTP WQ xmit submission tracking
      occurs after populating the metadata_map
    - net/mlx5e: Switch to using _bh variant of of spinlock API in port
      timestamping NAPI poll context
    - tracing/net_sched: Fix tracepoints that save qdisc_dev() as a string